# RimA_Germany_summerschool_clean

./: README.md
.devcontainer/: .shellrc_local  devcontainer.json
src/astar_vdb/: CMakeLists.txt  astar_vdbConfig.cmake  package.xml
src/astar_vdb/include/astar_vdb/: astar_utils.h  astar_vdb.h  priority_queue.h
src/astar_vdb/src/: astar_vdb.cpp
src/mqtt_client/mqtt_client/: CMakeLists.txt
src/mqtt_client/mqtt_client/config/: params.yaml
src/mqtt_client/mqtt_client/include/mqtt_client/: MqttClient.hpp
src/mqtt_client/mqtt_client/src/: MqttClient.cpp
src/navpi/: .gitignore  .gitlab-ci.yml  README.md  repos.yaml
src/navpi/navpi/: CMakeLists.txt  package.xml
src/navpi/navpi/config/: coordinator_params.yaml  global_planner_params.yaml  local_planner_params.yaml  navpi_coordinator_parameters.yaml  navpi_diff_drive_controller_parameters.yaml  navpi_global_planner_parameters.yaml  navpi_local_planner_parameters.yaml  navpi_path_sampler_parameters.yaml  navpi_recovery_parameters.yaml  navpi_rmp_local_planner_parameters.yaml  rmp_local_planner_params.yaml
src/navpi/navpi/doc/: architecture.rst  conf.py  index.rst
src/navpi/navpi/doc/resources/: architecture.drawio
src/navpi/navpi/include/navpi/: IntegerMotionValidator.h  IntegerStateSampler.h  IntegerStateSpace.h  MapHandle.h  RRTstarConnect.h  navpi_base_controller.hpp  navpi_coordinator.hpp  navpi_diff_drive_controller.hpp  navpi_global_planner.hpp  navpi_local_planner.hpp  navpi_obstacle_avoidance.hpp  navpi_path_sampler.hpp  navpi_recovery.hpp  navpi_rmp_local_planner.hpp  navpi_safety.hpp  navpi_safety_field.hpp  navpi_sampling_planner.hpp  utils.hpp
src/navpi/navpi/launch/: navpi_launch.py
src/navpi/navpi/src/: IntegerMotionValidator.cpp  IntegerStateSampler.cpp  IntegerStateSpace.cpp  MapHandle.cpp  RRTstarConnect.cpp  navpi_base_controller.cpp  navpi_coordinator.cpp  navpi_diff_drive_controller.cpp  navpi_global_planner.cpp  navpi_local_planner.cpp  navpi_node.cpp  navpi_obstacle_avoidance.cpp  navpi_path_sampler.cpp  navpi_prm_planner.cpp  navpi_recovery.cpp  navpi_rmp_local_planner.cpp  navpi_safety.cpp  navpi_sampling_planner.cpp  utils.cpp
src/navpi/navpi/test/: global_planner_test.cpp
src/navpi/navpi_interfaces/: CMakeLists.txt  package.xml
src/navpi/navpi_interfaces/action/: ExecutePath.action  PlanAndExecutePath.action  PlanPath.action  Recover.action
src/navpi/navpi_interfaces/msg/: Result.msg
src/navpi/navpi_testing/: CMakeLists.txt  package.xml
src/navpi/navpi_testing/include/navpi_testing/: mock_base.hpp
src/navpi/navpi_testing/src/: mock_base.cpp  mock_base_node.cpp  mock_base_parameters.yaml
src/planner_vdb_base/: CMakeLists.txt  package.xml  planner_vdb_baseConfig.cmake
src/planner_vdb_base/include/planner_vdb_base/: DataNode.h  VDBVisualization.h  VDBVisualization.hpp  planner_utils.h  planner_vdb_base.h
src/planner_vdb_base/src/: planner_utils.cpp  planner_vdb_base.cpp
src/rumps/: CMakeLists.txt  package.xml
src/rumps/include/rumps/: containers.hpp  rmp.hpp  rmp_leaf.hpp  rmp_mapping.hpp  rumps.hpp  spaces.hpp  types.hpp
src/rumps/test/: benchmark_leafs.cpp  test_leafs.cpp  test_navpi_issues.cpp
src/rviz_2d_nav_action/: .gitlab-ci.yml  CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_2d_nav_action/include/rviz_2d_nav_action_navpi/: nav_goal_tool.hpp
src/rviz_2d_nav_action/src/: nav_goal_tool.cpp
src/vdb_mapping_ros2/: .gitlab-ci.yml  README.md
src/vdb_mapping_ros2/vdb_mapping_interfaces/: CMakeLists.txt
src/vdb_mapping_ros2/vdb_mapping_interfaces/msg/: Ray.msg
src/vdb_mapping_ros2/vdb_mapping_interfaces/srv/: AddArtificialAreas.srv  BatchRaytrace.srv  Raytrace.srv  ToggleRemoteSource.srv
src/vdb_mapping_ros2/vdb_mapping_ros2/: CMakeLists.txt  package.xml
src/vdb_mapping_ros2/vdb_mapping_ros2/config/: vdb_params.yaml  vdb_remote_params.yaml
src/vdb_mapping_ros2/vdb_mapping_ros2/include/vdb_mapping_ros2/: VDBMappingROS2.hpp  VDBMappingTools.hpp
src/vdb_mapping_ros2/vdb_mapping_ros2/launch/: vdb_mapping_ros2.py
src/vdb_mapping_ros2/vdb_mapping_ros2/src/: vdb_mapping_ros2_component.cpp  vdb_mapping_ros_node.cpp
