<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_2d_nav_action_navpi</name>
  <version>2.0.0</version>
  <description>The rviz_2d_nav_action package</description>
  <maintainer email="oberacker@fzi.de">David Oberacker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <depend>navpi_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_common</depend>

  <depend>backward_ros</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
