<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navpi</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="exner@fzi.de">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <depend>astar_vdb</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navpi_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vdb_mapping_ros2</depend>
  <depend>visualization_msgs</depend>
  <depend>rumps</depend>
  <build_depend>backward_ros</build_depend>
  <depend>generate_parameter_library</depend>
  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
